--- a/tutorial/bg_info/tutorial/general_theme.css
+++ b/tutorial/bg_info/tutorial/general_theme.css
@@ -24,3 +24,27 @@ img {
 pre {
     margin-top: 10px;
 }
+
+.highlight {
+    background-color: yellow;
+}
+
+.inputs {
+     color: green;
+}
+
+.outputs {
+    color: blue;
+}
+
+.enter {
+    color: black;
+}
+
+.error {
+    color: red;
+}
+
+.info {
+    color: purple;
+}
